--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div> 
       <div id="objective"> 
         <p>
-          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for more than 5 years. I love coding and am extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
+          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for almost 8 years. I love coding and am extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
         </p> 
       </div> 
       <div class="clear"></div>
@@ -125,6 +125,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2019-02-25</footer>
+    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2020-03-08</footer>
   </body>
 </html>
