--- a/index.html
+++ b/index.html
@@ -56,19 +56,20 @@
       </div> 
       <div id="objective"> 
         <p>
-          I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for almost 8 years. I love coding and am extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
+          I'm an outgoing, creative and energetic Python &#38; SAS professional, have been working in the clinical trials industry for more than 8 years. I love coding and am extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
         </p> 
       </div> 
       <div class="clear"></div>
       <dd class="clear"></dd> <dt>Experience</dt> 
         <dd> 
           <ul>
-            <li>2018/11 - Present, Principal Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
-            <li>2016/11 - 2018/10, Senior Statistical Programmer at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
-            <li>2015/11 - 2016/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
-            <li>2014/11 - 2015/10, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
-            <li>2013/07 - 2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
-            <li>2013/04 - 2013/06, Statistical Programmer Intern at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
+            <li>2021/05 - Present, Senior Principal Statistical Programmer at <a target="_blank" href="https://www.elixir-research.com/">Elixir Clinical Research</a>, Home-Based, Shenzhen, Guangdong, China</li>
+            <li>2018/11 - 2021/04, Principal Statistical Programmer at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
+            <li>2016/11 - 2018/10, Senior Statistical Programmer at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
+            <li>2015/11 - 2016/10, Statistical Programmer II at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
+            <li>2014/11 - 2015/10, Statistical Programmer II at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+            <li>2013/07 - 2014/10, Statistical Programmer I at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+            <li>2013/04 - 2013/06, Statistical Programmer Intern at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
           </ul>
         </dd> 
       <dd class="clear"></dd> <dt>Papers</dt>
@@ -125,6 +126,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2021-03-08</footer>
+    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2021-05-21</footer>
   </body>
 </html>
