--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <dd class="clear"></dd> <dt>Papers</dt>
         <dd>
           <ul>
+            <li>Xianhua Zeng. <a target="_blank" href="https://www.pharmasug.org/proceedings/2024/PO/PharmaSUG-2024-PO-106.pdf">No LEAD Function? Let's Create It!</a>. <a target="_blank" href="http://www.pharmasug.org/us/2018/wrapup.html/">PharmaSUG 2024</a>, Baltimore, MD, USA, 2024/05/20</li>
             <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/2018/QT/PharmaSUG-2018-QT08.pdf">A Macro to Create Program Inventory for Analysis Data Reviewer’s Guide</a>. <a target="_blank" href="http://www.pharmasug.org/us/2018/wrapup.html/">PharmaSUG 2018</a>, Seattle, WA, USA, 2018/05/01</li>            
             <li>Xianhua Zeng, Shenglin Zhang. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2016/CD/PharmaSUG-China-2016-CD10_v2.pdf">Define.xml Content Validation - CRF Page Check</a>. <a target="_blank" href="http://www.pharmasug.org/china/2016/wrapup2016b.html/">PharmaSUG China 2016</a>, Beijing, 2016/09/09</li>
             <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/2015/wrapup.html">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
@@ -126,6 +127,6 @@
         </dd>
       <div class="clear"></div> 
     </div> 
-    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2021-05-21</footer>
+    <footer>Hosted by <a target="_blank" href="https://github.com/XianhuaZeng/xianhuazeng.github.io">GitHub</a> | Template modified from <a target="_blank" href="https://css-tricks.com/one-page-resume-site/">OnePageResume</a> | Last modified: 2024-06-03</footer>
   </body>
 </html>
