Updated link for ELR

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       </div> 
       <div id="objective"> 
         <p>
-          I'm an outgoing, creative and energetic Python &#38; SAS professional, have been working in the clinical trials industry for more than 8 years. I love coding and am extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
+          I'm an outgoing, creative and energetic Python &#38; SAS professional, have been working in the clinical trials industry for more than 11 years. I love coding and am extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.
         </p> 
       </div> 
       <div class="clear"></div>
       <dd class="clear"></dd> <dt>Experience</dt> 
         <dd> 
           <ul>
-            <li>2021/05 - Present, Senior Principal Statistical Programmer at <a target="_blank" href="https://www.elixir-research.com/">Elixir Clinical Research</a>, Home-Based, Shenzhen, Guangdong, China</li>
+            <li>2021/05 - Present, Senior Principal Statistical Programmer at <a target="_blank" href="https://ecr-global.com/">Elixir Clinical Research</a>, Home-Based, Shenzhen, Guangdong, China</li>
             <li>2018/11 - 2021/04, Principal Statistical Programmer at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
             <li>2016/11 - 2018/10, Senior Statistical Programmer at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
             <li>2015/11 - 2016/10, Statistical Programmer II at <a target="_blank" href="https://www.parexel.com/">PAREXEL</a>, Home-Based, Shenzhen, Guangdong, China</li>
